chore: misc refactorings